[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "django~=3.2",
    "djangorestframework~=3.12",
    "djangorestframework-simplejwt~=4.7",
    "mongoengine~=0.23",
    "djongo~=1.3",
    "dnspython~=2.1",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
